# sandwich-rs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  netlify.toml
.context/: codex-review.md
fixtures/: known-sandwiches.csv
frontend/: .env.example  .gitignore  index.html  netlify.toml  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: FeedTable.tsx  HeroStatBand.tsx  LeaderboardTable.tsx  Mark.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/lib/: format.ts  supabase.ts
frontend/src/pages/: Methodology.tsx
ops/: deploy.sh  sandwich-rs.env.example  sandwich-rs.service
src/: config.rs  db.rs  detector.rs  enricher.rs  http.rs  lib.rs  main.rs  parser.rs  pyth.rs  slot_resume.rs  telegram.rs  ws.rs
