[package]
name = "sandwich-rs"
version = "0.1.0"
edition = "2021"
description = "Real-time Solana MEV sandwich detector"
license = "MIT"
repository = "https://github.com/claygeo/sandwich-rs"
default-run = "sandwich-rs"

[lib]
name = "sandwich_rs"
path = "src/lib.rs"

[[bin]]
name = "sandwich-rs"
path = "src/main.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "scrape-fixtures"
path = "src/bin/scrape-fixtures.rs"

[dependencies]
# Async runtime + WS + HTTP
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
async-stream = "0.3"

# HTTP server (axum on tokio + hyper)
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DB (sqlx direct Postgres via Supabase pooler)
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "rust_decimal",
] }

# Errors + utility
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }

# Concurrent state
dashmap = "6"

# HTTP client (Telegram + Solscan price lookups later)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CSV (backtest binary)
csv = "1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
